Bug 1184807 - TextTrackList should check if we are shutting down before dispatching events, r=mccr8